fixed problem with overflow

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -17,6 +17,7 @@
   border-radius: $border-radius;
   box-shadow: 2em 0 2em 3em $color-light-background;
   overflow: auto;
+  overflow-x: hidden;
 
   &_content {
     display: flex;
